--- a/index.htm
+++ b/index.htm
@@ -13,9 +13,10 @@
         <button id="button">
             Tell me a joke!
         </button>
-        <audio id="audio" controls></audio>
+        <audio id="audio" controls hidden></audio>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="voice.js"></script>
 </body>
 </html>
